[project]
name = "tumblr-backup"
version = "1.6.4.dev0"
description = "An advanced tool for backing up Tumblr blogs."
dynamic = ["readme"]
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
    "3rdparty/npf2html/LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "colorama>=0.4.6,<0.5",
    "filetype~=1.2",
    "platformdirs~=4.2",
    "pydantic>=2.12.3,<3",
    "requests>=2.32.5,<3",
    "truststore>=0.10.4,<0.11; sys_platform == 'darwin'",
    "typing_extensions>=4.5.0,<5",
    "urllib3>=2.2.2,<2.6",
]

[project.optional-dependencies]
bs4 = [
    "beautifulsoup4>=4.14.2,<5",
    "lxml>=6.0.2,<6.1",
]
dash = [
    "quickjs>=1.19.4,<2",
]
exif = [
    "py3exiv2~=0.12",
]
jq = [
    "jq~=1.6",
]
video = [
    "yt_dlp>=2023.12.30",
]
all = [
    "tumblr-backup[bs4,dash,exif,jq,video]",
]
dev = [
    "tumblr-backup[all]",

    # dev tools
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "wemake-python-styleguide>=1.4.0",

    # type stubs and other optional modules
    "mini-racer>=0.12.4",
    "pysocks>=1.7.1,<2",
    "types-lxml>=2025.08.25",
    "types-requests>=2.32.4.20250913,<3",
    "youtube_dl>=2021.12.17",
]

[project.urls]
"Homepage" = "https://github.com/cebtenzzre/tumblr-utils"
"Documentation" = "https://cebtenzzre.github.io/tumblr-utils/"
"Bug Reports" = "https://github.com/cebtenzzre/tumblr-utils/issues"
"Source" = "https://github.com/cebtenzzre/tumblr-utils"

[project.scripts]
tumblr-backup = "tumblr_backup.main:main"
tb-login = "tumblr_backup.login:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["tumblr_backup", "tumblr_backup.npf"]

[tool.setuptools.package-data]
tumblr_backup = [
    "assets/npf2html.iife.js",
    "assets/npf2html.iife.js.map",
    "assets/*",
    "templates/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
files = 'tumblr_backup'
pretty = true
strict = true
warn_unused_ignores = false
allow_untyped_calls = true
warn_return_any = false
allow_subclassing_any = true
allow_untyped_defs = true
allow_incomplete_defs = true
disable_error_code = ['import-untyped']

[tool.isort]
src_paths = ['tumblr_backup']
line_length = 120
combine_as_imports = true

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]
